Fix broken css after w3 changes

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ ul {
 }
 
 li {
-    width: 100%;
     margin: 0 auto;
 }
 
@@ -131,7 +130,7 @@ footer section {
    align-self: end;
 }
 
-nav a {
+nav li {
     background-color: var(--light-blue);
     padding: 8px 16px;
     flex-grow: 1;
@@ -296,6 +295,7 @@ summary {
 .h-card {
     display: flex;
     align-items: end;
+    align-self: end;
 }
 
 .h-card img {
